GA included, fixed image positioning on mobile & tablet, modified slick carousel on tablet.

--- a/assets/styles/views/_landing_main.scss
+++ b/assets/styles/views/_landing_main.scss
@@ -18,6 +18,31 @@
   #hero-cover {
     background: url('../images/pear_hero_1.png');
     background-color: black;
+
+    &.hero-1 {
+      @media #{$small-and-down} {
+        background-position: 63% 50%!important;
+      }
+      @media #{$extra-small-and-down} {
+        background-position: 47% 50% !important;
+      }
+    }
+    &.hero-2 {
+      @media #{$small-and-down} {
+        background-position: 42% 50%!important;
+      }
+      @media #{$extra-small-and-down} {
+        background-position: 45% 1%!important;
+      }
+    }
+    &.hero-3 {
+      @media #{$small-and-down} {
+        background-position: 32% 1%!important;
+      }
+      @media #{$extra-small-and-down} {
+        background-position: 37% 1%!important;
+      }
+    }
   }
 
   .landing-main {
